# audio-transcription-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
function_app/: __init__.py  function_app.py  host.json  requirements.txt
function_app/.bin/: python3
scripts/: cleanup_agents.py  query_agent.py  upload_audio.py
terraform/: main.tf  outputs.sh
